# AngelScript-C

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: AngelScript_c.h  angelscript_c.h
include/angelscript/: angelscript_c.h  jit.h
src/: AngelScript_c.cpp  angelscript_c.cpp
test/: CMakeLists.txt  meaning_of_life.c
test/src/: test.c  test2.cpp
